Overview page alignment issues

--- a/features/org.wso2.analytics.is.feature/src/main/capp/dashboard/IsAnalytics-Gadget-Overview_1.0.0/Overview/css/custom.css
+++ b/features/org.wso2.analytics.is.feature/src/main/capp/dashboard/IsAnalytics-Gadget-Overview_1.0.0/Overview/css/custom.css
@@ -40,5 +40,5 @@ body.dark .btn-default:hover {
 }
 
 .caption > p {
-    height: 5%;
+    height: 40%;
 }
